Allow re-enabling interfaces